apps/mlbroking/dataproxy/backend_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataproxy-backend
  namespace: mlbroking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataproxy
      tier: backend
  template:
    metadata:
      labels:
        app: dataproxy
        tier: backend
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dataproxy
                - key: tier
                  operator: In
                  values:
                  - database
      containers:
        - name: dataproxy
          image: registry.k8s.grigri/dataproxy:2f056758fa01f1862f8a93913ee00c0ab61a6eb8
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 600m
              memory: 512M
            requests:
              cpu: 300m
              memory: 128M
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          # Enable when python libs change from /root/.local/bin
          #securityContext:
          #  runAsNonRoot: true
          #  runAsUser: 65534
