apps/mlbroking/dataproxy/database_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dataproxy-database
  namespace: mlbroking
  labels:
    app: dataproxy
    tier: database
spec:
  type: ClusterIP
  ports:
   - port: 5432
     protocol: TCP
     name: postgres
     targetPort: 5432
  selector:
    app: dataproxy
    tier: database
